# raytracing-in-one-weekend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Source/: Camera.cpp  Camera.cu  Camera.cuh  Camera.hpp  IMaterial.cuh  Ray.cuh  Ray.hpp  Render.cu  Render.cuh  Surface.cpp  Surface.cu  Surface.cuh  Surface.hpp  Typedef.cuh  color.hpp  main.cpp  main.cu  ray.hpp  surface.cpp  surface.hpp  typedef.hpp
Source/Hit/: HitData.cuh  HittableObjects.cpp  HittableObjects.cu  HittableObjects.cuh  HittableObjects.hpp  HittableObjectsDevice.cu  HittableObjectsDevice.cuh  IHittableObject.cu  IHittableObject.cuh  IHittableObject.hpp
Source/Hit/Object/: BoxObject.cu  BoxObject.cuh  SphereObject.cpp  SphereObject.cu  SphereObject.cuh  SphereObject.hpp
Source/Material/: IMaterial.cuh  Lambertian.cu  Lambertian.cuh  Metal.cu  Metal.cuh
Source/Misc/: Random.cuh  Random.hpp
Source/Util/: Random.cuh  SDLHelpers.cuh  Timer.cu  Timer.cuh
